--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="healthRed">#ff0000</color>
+    <color name="attackYellow">#ffff19</color>
+    <color name="manaBlue">#3433FF</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
 </resources>
