--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -66,7 +66,7 @@
             app:layout_constraintHeight_percent="0.35"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/health"
-            app:layout_constraintLeft_toRightOf="" Of="@+id/attack"
+            app:layout_constraintLeft_toRightOf="@+id/attack"
             android:text="Summon up to three 1/1 air elemental"
             android:textSize="14px"
             android:textColor="@color/black"
