--- a/app/src/main/res/layout/play.xml
+++ b/app/src/main/res/layout/play.xml
@@ -49,7 +49,7 @@
                 android:layout_width="200px"
                 android:layout_height="200px"
                 android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"/>
+                android:layout_centerHorizontal="true" />
 
             <Button
                 android:layout_width="wrap_content"
@@ -87,48 +87,44 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"/>
 
-            <LinearLayout
-                android:id="@+id/currentPlayerHand"
+            <include
+                android:id="@+id/opponentPlayerHand"
+                layout="@layout/hand"
+                bind:hand="@{gameConsole.opponentPlayer.hand}"
                 android:layout_width="0px"
                 android:layout_height="200px"
-                android:orientation="horizontal"
-                android:layout_toLeftOf="@id/currentPlayer"
-                android:layout_alignParentBottom="true"
+                android:layout_toLeftOf="@id/opponentPlayer"
                 android:layout_alignParentLeft="true"
-                android:layout_marginHorizontal="10px">
+                android:layout_alignParentTop="true"/>
 
-                <include
-                    layout="@layout/card"
-                    android:layout_width="45dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="5dp"/>
+            <include
+                android:id="@+id/currentPlayerHand"
+                layout="@layout/hand"
+                bind:hand="@{gameConsole.currentPlayer.hand}"
+                android:layout_width="0px"
+                android:layout_height="200px"
+                android:layout_toLeftOf="@id/currentPlayer"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentBottom="true"/>
 
-                <include
-                    layout="@layout/card"
-                    android:layout_width="45dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="5dp"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true">
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="incrementAttack"
+                    android:textAllCaps="false"
+                    android:onClick="incrementAttack"/>
 
-                <include
-                    layout="@layout/card"
-                    android:layout_width="45dp"
-                    android:layout_height="match_parent"/>
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="decrementAttack"
+                    android:textAllCaps="false"
+                    android:onClick="decrementAttack"/>
             </LinearLayout>
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="incrementAttack"
-                android:textAllCaps="false"
-                android:onClick="incrementAttack"/>
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="decrementAttack"
-                android:textAllCaps="false"
-                android:onClick="decrementAttack"/>
 
             <ImageView
                 android:id="@+id/target"
