bind description for card

--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -66,7 +66,7 @@
             android:id="@+id/effect"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:text="Summon up to three 1/1 air elemental"
+            android:text="@{card.description}"
             android:textSize="14px"
             android:textColor="@color/black"
             android:gravity="center"
