--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -54,6 +54,7 @@
             android:layout_height="0dp"
             android:background="@color/attackYellow"
             android:text="@{card instanceof BaseMonster ? Integer.toString(((BaseMonster)card).attack) : null}"
+            android:visibility="@{card instanceof BaseMonster ? View.VISIBLE : View.GONE}"
             android:textSize="16px"
             android:textColor="@color/black"
             android:gravity="center"
@@ -86,6 +87,7 @@
             app:layout_constraintRight_toRightOf="parent"
             android:background="@color/healthRed"
             android:text="@{card instanceof BaseMonster ? Integer.toString(((BaseMonster)card).defense) : null}"
+            android:visibility="@{card instanceof BaseMonster ? View.VISIBLE : View.GONE}"
             android:textSize="16px"
             android:textColor="@color/white"
             android:gravity="center"/>
