dont show opponent's hand

--- a/app/src/main/res/layout/play.xml
+++ b/app/src/main/res/layout/play.xml
@@ -90,6 +90,7 @@
                 android:id="@+id/opponentPlayerHand"
                 layout="@layout/hand"
                 bind:hand="@{gameConsole.opponentPlayer.hand}"
+                bind:playersTurn="@{false}"
                 android:layout_width="0px"
                 android:layout_height="200px"
                 android:layout_toLeftOf="@id/opponentPlayer"
@@ -100,6 +101,7 @@
                 android:id="@+id/currentPlayerHand"
                 layout="@layout/hand"
                 bind:hand="@{gameConsole.currentPlayer.hand}"
+                bind:playersTurn="@{true}"
                 android:layout_width="0px"
                 android:layout_height="200px"
                 android:layout_toLeftOf="@id/currentPlayer"
@@ -110,6 +112,7 @@
                 android:id="@+id/cardPreview"
                 layout="@layout/card"
                 bind:card="@{gameConsole.cardPreview}"
+                bind:showCard="@{true}"
                 android:layout_width="275px"
                 android:layout_height="450px"
                 android:visibility="invisible"
