--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -7,6 +7,9 @@
         <variable
             name="card"
             type="com.example.victorlee.fakehearthstone.backend.cards.Card"/>
+        <variable
+            name="showCard"
+            type="java.lang.Boolean"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -16,12 +19,26 @@
         android:background="@drawable/square_border">
 
         <TextView
+            android:id="@+id/cardSleeve"
+            android:layout_width="125px"
+            android:layout_height="20px"
+            android:text="Cool Card Sleeve"
+            android:visibility="@{!showCard ? View.VISIBLE : View.GONE}"
+            android:textSize="16px"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+        <TextView
             android:id="@+id/cost"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/manaBlue"
             android:gravity="center"
             android:text="@{Integer.toString(card.cost)}"
+            android:visibility="@{showCard ? View.VISIBLE : View.GONE}"
             android:textColor="@color/white"
             android:textSize="16px"
             app:layout_constraintBottom_toTopOf="@id/name"
@@ -36,6 +53,7 @@
             app:layout_constraintHeight_percent="0.2"
             app:layout_constraintTop_toBottomOf="@+id/cost"
             android:text="@{card.name}"
+            android:visibility="@{showCard ? View.VISIBLE : View.GONE}"
             android:textSize="18px"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -45,6 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:src="@drawable/air_elemental"
+            android:visibility="@{showCard ? View.VISIBLE : View.GONE}"
             app:layout_constraintHeight_percent="0.3"
             app:layout_constraintTop_toBottomOf="@+id/name"/>
 
@@ -54,7 +73,7 @@
             android:layout_height="0dp"
             android:background="@color/attackYellow"
             android:text="@{card instanceof BaseMonster ? Integer.toString(((BaseMonster)card).attack) : null}"
-            android:visibility="@{card instanceof BaseMonster ? View.VISIBLE : View.GONE}"
+            android:visibility="@{card instanceof BaseMonster &amp;&amp; showCard ? View.VISIBLE : View.GONE}"
             android:textSize="16px"
             android:textColor="@color/black"
             android:gravity="center"
@@ -68,6 +87,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:text="@{card.description}"
+            android:visibility="@{showCard ? View.VISIBLE : View.GONE}"
             android:textSize="14px"
             android:textColor="@color/black"
             android:gravity="center"
@@ -87,7 +107,7 @@
             app:layout_constraintRight_toRightOf="parent"
             android:background="@color/healthRed"
             android:text="@{card instanceof BaseMonster ? Integer.toString(((BaseMonster)card).defense) : null}"
-            android:visibility="@{card instanceof BaseMonster ? View.VISIBLE : View.GONE}"
+            android:visibility="@{card instanceof BaseMonster &amp;&amp; showCard ? View.VISIBLE : View.GONE}"
             android:textSize="16px"
             android:textColor="@color/white"
             android:gravity="center"/>
