--- a/app/src/main/res/layout/hand.xml
+++ b/app/src/main/res/layout/hand.xml
@@ -6,6 +6,9 @@
         <variable
             name="hand"
             type="com.example.victorlee.fakehearthstone.backend.Hand"/>
+        <variable
+            name="playersTurn"
+            type="java.lang.Boolean"/>
     </data>
 
     <LinearLayout
@@ -18,6 +21,7 @@
         <include
             layout="@layout/card"
             bind:card="@{hand.numOfCardsInHand >= 1 ? hand.getCard(1) : null}"
+            bind:showCard="@{playersTurn}"
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:visibility="@{hand.numOfCardsInHand >= 1 ? View.VISIBLE : View.GONE}"/>
@@ -25,6 +29,7 @@
         <include
             layout="@layout/card"
             bind:card="@{hand.numOfCardsInHand >= 2 ? hand.getCard(2) : null}"
+            bind:showCard="@{playersTurn}"
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:visibility="@{hand.numOfCardsInHand >= 2 ? View.VISIBLE : View.GONE}"/>
@@ -32,6 +37,7 @@
         <include
             layout="@layout/card"
             bind:card="@{hand.numOfCardsInHand >= 3 ? hand.getCard(3) : null}"
+            bind:showCard="@{playersTurn}"
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:visibility="@{hand.numOfCardsInHand >= 3 ? View.VISIBLE : View.GONE}"/>
@@ -39,6 +45,7 @@
         <include
             layout="@layout/card"
             bind:card="@{hand.numOfCardsInHand >= 4 ? hand.getCard(4) : null}"
+            bind:showCard="@{playersTurn}"
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:visibility="@{hand.numOfCardsInHand >= 4 ? View.VISIBLE : View.GONE}"/>
@@ -46,6 +53,7 @@
         <include
             layout="@layout/card"
             bind:card="@{hand.numOfCardsInHand >= 5 ? hand.getCard(5) : null}"
+            bind:showCard="@{playersTurn}"
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:visibility="@{hand.numOfCardsInHand >= 5 ? View.VISIBLE : View.GONE}"/>
@@ -53,6 +61,7 @@
         <include
             layout="@layout/card"
             bind:card="@{hand.numOfCardsInHand >= 6 ? hand.getCard(6) : null}"
+            bind:showCard="@{playersTurn}"
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:visibility="@{hand.numOfCardsInHand >= 6 ? View.VISIBLE : View.GONE}"/>
